# gates

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  PRODUCTION_FIXES.md  README.md  ROADMAP.md  build_and_run.sh  run_tests.sh  run_validation.sh
.github/workflows/: ci.yml
docs/: audit-findings.md
docs/source/: architecture.rst  code_quality.rst  conf.py  contributing.rst  examples.rst  index.rst  internals.rst  known_issues.rst  license.rst  modules.rst  testing.rst  usage.rst
docs/source/_static/: custom.css
docs/source/internals/: algorithms.rst  ast.rst  codegen.rst  error_handling.rst  lexer.rst  overview.rst  parser.rst  symbols.rst  types.rst
examples/: ci_validate.c  function_calls.c
include/: astnode.h  codegen_vhdl.h  config.h  error_handler.h  parse.h  parse_control_flow.h  symbol_arrays.h  symbol_structs.h  token.h  utils.h
src/: error_handler.c
src/app/: compi.c  gates.c
src/codegen/: codegen_vhdl_constants.c  codegen_vhdl_constants.h  codegen_vhdl_emit.c  codegen_vhdl_emit.h  codegen_vhdl_expressions.c  codegen_vhdl_expressions.h  codegen_vhdl_helpers.c  codegen_vhdl_helpers.h  codegen_vhdl_main.c  codegen_vhdl_statements.c  codegen_vhdl_statements.h  codegen_vhdl_types.c  codegen_vhdl_types.h
src/core/: astnode.c  utils.c
src/parser/: parse.c  parse_control_flow.c  parse_control_flow.h  parse_expression.c  parse_expression.h  parse_for.c  parse_for.h  parse_function.c  parse_function.h  parse_statement.c  parse_statement.h  parse_struct.c  parse_struct.h  token.c  tokenizer.h
src/symbols/: symbol_arrays.c  symbol_structs.c
tests/: basic_tests.cpp  edge_case_tests.cpp  integration_tests.cpp  test_error_handler.cpp
tests/integration/: integration_tests.cpp
tests/unit/: basic_tests.cpp  test_error_handler.cpp
tools/: cppcheck_suppressions.txt  run_cppcheck.sh
